# you-are-idiot

./: .gitignore  CMakeLists.txt  README.md
scripts/: you.js
src/: main.cpp
